Javaのバージョンに合わせた修正